Mudanças nas pastas 3

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="instrumentos musicais, contato, fale conosco">
     <meta name="author" content="Nome da Loja">
     <title>Fale Conosco | Loja de Instrumentos Musicais</title>
-    <link rel="stylesheet" href="/css/fale-conosco.css">
+    <link rel="stylesheet" href="css/fale-conosco.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -18,12 +18,12 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="/index.html"><img src="/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/quem-somos.html">Quem Somos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
-                    <a href="/produtos.html">Produtos</a>
+                    <a href="produtos.html">Produtos</a>
                     <div class="dropdown-content">
                         <a href="/produtos/instrumentos.html">Instrumentos</a>
                         <a href="/produtos/acessorios.html">Acessórios</a>
@@ -31,7 +31,7 @@
                     </div>
                 </li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
-                <li><a href="/carrinho.html" id="carrinho-btn">
+                <li><a href="carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
                     </a></li>
@@ -83,9 +83,9 @@
                     </div>
                 </div>
                 <div class="footer-links">
-                    <a href="/fale-conosco.html">Fale Conosco</a>
-                    <a href="/faq.html">FAQ</a>
-                    <a href="/ajuda.html">Ajuda</a>
+                    <a href="fale-conosco.html">Fale Conosco</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="ajuda.html">Ajuda</a>
                 </div>
             </div>
 
@@ -93,22 +93,22 @@
             <div class="brands-section">
                 <div class="brands-logos">
                     <a href="https://www.gibson.com" target="_blank">
-                        <img src="/img/gibson1.png" alt="Gibson" class="brand-logo">
+                        <img src="img/gibson1.png" alt="Gibson" class="brand-logo">
                     </a>
                     <a href="https://www.fender.com" target="_blank">
-                        <img src="/img/fender.png" alt="Fender" class="brand-logo">
+                        <img src="img/fender.png" alt="Fender" class="brand-logo">
                     </a>
                     <a href="https://www.jacksonguitars.com" target="_blank">
-                        <img src="/img/jacksom.png" alt="Jackson" class="brand-logo">
+                        <img src="img/jacksom.png" alt="Jackson" class="brand-logo">
                     </a>
                     <a href="https://www.espguitars.com" target="_blank">
-                        <img src="/img/esp1.jpg" alt="ESP" class="brand-logo">
+                        <img src="img/esp1.jpg" alt="ESP" class="brand-logo">
                     </a>
                     <a href="https://www.ltdguitars.com" target="_blank">
-                        <img src="/img/ltd.png" alt="LTD" class="brand-logo">
+                        <img src="img/ltd.png" alt="LTD" class="brand-logo">
                     </a>
                     <a href="https://www.washburn.com" target="_blank">
-                        <img src="/img/washburn.png" alt="Washburn" class="brand-logo">
+                        <img src="img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
                 </div>
                 <p class="copyright">&copy; 2025 Loja Teste de Instrumentos Musicais. Todos os direitos reservados.</p>
@@ -164,8 +164,8 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <script src="/js/script.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
