Mudanças nas pastas 9

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-        <section class="banner" style="background: url('../img/banner.png') repeat center center/contain;">
+        <section class="banner" style="background: url('img/banner.png') repeat center center/contain;">
             <h1>Bem-vindo à Loja de Instrumentos Musicais</h1>
             <p>Encontre os melhores instrumentos e acessórios para todos os estilos musicais.</p>
         </section>
@@ -53,46 +53,46 @@
 
         <section class="produtos">
             <h2>Produtos em Destaque</h2>
-            <div class="carrossel-container" style="background-image: url('../img/banner.png')">
+            <div class="carrossel-container" style="background-image: url('img/banner.png')">
                 <button class="carrossel-btn prev-btn" onclick="moverCarrossel(-1)">&#10094;</button>
                 <div class="carrossel">
                     <div class="produtos-container">
-                        <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="5000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="5000" style="background-image: url('img/banner.png')">
                             <img src="img/guitar-fender.png" alt="Guitarra Fender Stratocaster">
                             <h3>Guitarra Fender Stratocaster</h3>
                             <p>Código: 12345</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000" style="background-image: url('img/banner.png')">
                             <img src="img/bfender.png" alt="Contra Baixo Fender ">
                             <h3>Contra Baixo Fender Bassman</h3>
                             <p>Código: 12356</p>
                             <p>Preço: R$ 3.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="5000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="5000" style="background-image: url('img/banner.png')">
                             <img src="img/gibson.png" alt="Guitarra Gibson Les Paul">
                             <h3>Guitarra Gibson Les Paul</h3>
                             <p>Código: 12347</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="5000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="5000" style="background-image: url('img/banner.png')">
                             <img src="img/ibanez.png" alt="Guitarra Ibanez">
                             <h3>Guitarra Ibanez</h3>
                             <p>Código: 12348</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="5000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="5000" style="background-image: url('img/banner.png')">
                             <img src="img/jackson.png" alt="Guitarra Jackson">
                             <h3>Guitarra Jackson</h3>
                             <p>Código: 12349</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="5000" style="background-image: url('../img/banner.png')">
+                        <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="5000" style="background-image: url('img/banner.png')">
                             <img src="img/tagima.png" alt="Guitarra Tagima Stratocaster">
                             <h3>Guitarra Tagima Stratocaster</h3>
                             <p>Código: 12350</p>
@@ -164,7 +164,7 @@
     </footer>
 
     <div id="login-cadastro-modal" class="modal">
-        <div class="modal-content" style="background-image: url('../img/banner.png')">
+        <div class="modal-content" style="background-image: url('img/banner.png')">
             <span class="close" onclick="fecharModal()">&times;</span>
             <div class="tabs">
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
