Mudanças nas pastas 10

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p class="promo1">Descontos incríveis em todos os produtos. Aproveite agora!</p>
         </section>
 
-        <section class="produtos">
+        <section class="produtos" style="background-image: url('img/banner.png')">
             <h2>Produtos em Destaque</h2>
             <div class="carrossel-container" style="background-image: url('img/banner.png')">
                 <button class="carrossel-btn prev-btn" onclick="moverCarrossel(-1)">&#10094;</button>
