Mudanças nas pastas 11

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
 
-    <main>
+    <main style="background-image: url('img/banner.png')">
         <section class="banner" style="background: url('img/banner.png') repeat center center/contain;">
             <h1>Bem-vindo à Loja de Instrumentos Musicais</h1>
             <p>Encontre os melhores instrumentos e acessórios para todos os estilos musicais.</p>
@@ -51,7 +51,7 @@
             <p class="promo1">Descontos incríveis em todos os produtos. Aproveite agora!</p>
         </section>
 
-        <section class="produtos" style="background-image: url('img/banner.png')">
+        <section class="produtos">
             <h2>Produtos em Destaque</h2>
             <div class="carrossel-container" style="background-image: url('img/banner.png')">
                 <button class="carrossel-btn prev-btn" onclick="moverCarrossel(-1)">&#10094;</button>
