--- a/index.html
+++ b/index.html
@@ -57,43 +57,43 @@
                 <button class="carrossel-btn prev-btn" onclick="moverCarrossel(-1)">&#10094;</button>
                 <div class="carrossel">
                     <div class="produtos-container">
-                        <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="5000" style="background-image: url('img/banner.png')">
-                            <img src="img/guitar-fender.png" alt="Guitarra Fender Stratocaster">
+                        <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="5000">
+                            <img src="img/guitar-fender.png" alt="Guitarra Fender Stratocaster" style="background-image: url('img/banner.png')">
                             <h3>Guitarra Fender Stratocaster</h3>
                             <p>Código: 12345</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000" style="background-image: url('img/banner.png')">
-                            <img src="img/bfender.png" alt="Contra Baixo Fender ">
+                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000" >
+                            <img src="img/bfender.png" alt="Contra Baixo Fender " style="background-image: url('img/banner.png')">
                             <h3>Contra Baixo Fender Bassman</h3>
                             <p>Código: 12356</p>
                             <p>Preço: R$ 3.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="5000" style="background-image: url('img/banner.png')">
-                            <img src="img/gibson.png" alt="Guitarra Gibson Les Paul">
+                        <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="5000">
+                            <img src="img/gibson.png" alt="Guitarra Gibson Les Paul" style="background-image: url('img/banner.png')">
                             <h3>Guitarra Gibson Les Paul</h3>
                             <p>Código: 12347</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="5000" style="background-image: url('img/banner.png')">
-                            <img src="img/ibanez.png" alt="Guitarra Ibanez">
+                        <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="5000">
+                            <img src="img/ibanez.png" alt="Guitarra Ibanez" style="background-image: url('img/banner.png')">
                             <h3>Guitarra Ibanez</h3>
                             <p>Código: 12348</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="5000" style="background-image: url('img/banner.png')">
-                            <img src="img/jackson.png" alt="Guitarra Jackson">
+                        <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="5000">
+                            <img src="img/jackson.png" alt="Guitarra Jackson" style="background-image: url('img/banner.png')">
                             <h3>Guitarra Jackson</h3>
                             <p>Código: 12349</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="5000" style="background-image: url('img/banner.png')">
-                            <img src="img/tagima.png" alt="Guitarra Tagima Stratocaster">
+                        <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="5000">
+                            <img src="img/tagima.png" alt="Guitarra Tagima Stratocaster" style="background-image: url('img/banner.png')">
                             <h3>Guitarra Tagima Stratocaster</h3>
                             <p>Código: 12350</p>
                             <p>Preço: R$ 5.000,00</p>
