Mudanças nas pastas 13

--- a/carrinho.html
+++ b/carrinho.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body style="background-image: url(img/banner.png)">
     <header>
         <nav>
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="banner">
+        <section class="banner" style="background-image: url(img/banner.png) repeat center center/contain">
             <h1>Bem-vindo à Loja de Instrumentos Musicais</h1>
             <p>Compre com confiança! Garantimos a segurança das suas informações pessoais e financeiras durante todas as
                 etapas da compra.</p>
@@ -133,7 +133,7 @@
     </footer>
 
     <div id="login-cadastro-modal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content" style="background-image: url(img/banner.png)">
             <span class="close" onclick="fecharModal()">&times;</span>
             <div class="tabs">
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
