--- a/perfil.html
+++ b/perfil.html
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="perfil">
+        <section class="perfil" style="background-image: url(img/banner.png)">
             <h1>Meu Perfil</h1>
             <div class="perfil-container">
                 <!-- Informações do Perfil -->
