--- a/ajuda.html
+++ b/ajuda.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body style="background-image: url(img/banner.png)">
     <header>
         <nav>
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="ajuda">
+        <section class="ajuda" style="background-image: url(img/banner.png)">
             <h1>Ajuda</h1>
             <p class="parag">Encontre respostas para as perguntas mais frequentes e instruções sobre como usar nossa
                 loja.</p>
@@ -152,7 +152,7 @@
     </footer>
 
     <div id="login-cadastro-modal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content" style="background-image: url(img/banner.png)">
             <span class="close" onclick="fecharModal()">&times;</span>
             <div class="tabs">
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
