--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body style="background-image: url(img/banner.png)">
     <header>
         <nav>
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="faq">
+        <section class="faq" style="background-image: url(img/banner.png)">
             <h1>Perguntas Frequentes (FAQ)</h1>
 
             <div class="pergunta">
@@ -134,7 +134,7 @@
     </footer>
 
     <div id="login-cadastro-modal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content" style="background-image: url(img/banner.png)">
             <span class="close" onclick="fecharModal()">&times;</span>
             <div class="tabs">
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
