--- a/produtos.html
+++ b/produtos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body style="background-image: url(img/banner.png)">
     <header>
         <nav>
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
@@ -42,7 +42,7 @@
     </header>
 
     <main>
-        <section class="banner">
+        <section class="banner" style="background-image: url(img/banner.png) repeat center center/contain">
             <h1>Bem-vindo à Loja de Instrumentos Musicais</h1>
             <p>Encontre os melhores instrumentos e acessórios para todos os estilos musicais.</p>
         </section>
@@ -94,7 +94,7 @@
 
             <div class="lista-produtos">
                 <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="4200">
-                    <img src="img/guitar-fender.png" alt="Guitarra Fender Stratocaster">
+                    <img src="img/guitar-fender.png" alt="Guitarra Fender Stratocaster" style="background-image: url(img/banner.png)">
                     <h3>Guitarra Fender Stratocaster</h3>
                     <p>Código: 12345</p>
                     <p>Preço: R$ 4.200,00</p>
@@ -102,7 +102,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="guitarras" data-marca="esp" data-preco="5000">
-                    <img src="img/esp.jpg" alt="Guitarra ESP">
+                    <img src="img/esp.jpg" alt="Guitarra ESP" style="background-image: url(img/banner.png)">
                     <h3>Guitarra ESP</h3>
                     <p>Código: 12346</p>
                     <p>Preço: R$ 5.000,00</p>
@@ -110,7 +110,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="6000">
-                    <img src="img/gibson.png" alt="Guitarra Gibson Les Paul">
+                    <img src="img/gibson.png" alt="Guitarra Gibson Les Paul" style="background-image: url(img/banner.png)">
                     <h3>Guitarra Gibson Les Paul</h3>
                     <p>Código: 12347</p>
                     <p>Preço: R$ 6.000,00</p>
@@ -118,7 +118,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="1900">
-                    <img src="img/ibanez.png" alt="Guitarra Ibanez">
+                    <img src="img/ibanez.png" alt="Guitarra Ibanez" style="background-image: url(img/banner.png)">
                     <h3>Guitarra Ibanez</h3>
                     <p>Código: 12348</p>
                     <p>Preço: R$ 1.900,00</p>
@@ -126,7 +126,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="2800">
-                    <img src="img/jackson.png" alt="Guitarra Jackson">
+                    <img src="img/jackson.png" alt="Guitarra Jackson" style="background-image: url(img/banner.png)">
                     <h3>Guitarra Jackson</h3>
                     <p>Código: 12349</p>
                     <p>Preço: R$ 2.800,00</p>
@@ -134,7 +134,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="4300">
-                    <img src="img/tagima.png" alt="Guitarra Tagima Stratocaster">
+                    <img src="img/tagima.png" alt="Guitarra Tagima Stratocaster" style="background-image: url(img/banner.png)">
                     <h3>Guitarra Tagima Stratocaster</h3>
                     <p>Código: 12350</p>
                     <p>Preço: R$ 4.300,00</p>
@@ -142,7 +142,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="yamaha" data-preco="2600">
-                    <img src="img/yamaha.jpg" alt="Contra Baixo Yamaha">
+                    <img src="img/yamaha.jpg" alt="Contra Baixo Yamaha" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Yamaha 6 cordas</h3>
                     <p>Código: 12390</p>
                     <p>Preço: R$ 2.600,00</p>
@@ -150,7 +150,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="fender" data-preco="3000">
-                    <img src="img/bfender.png" alt="Contra Baixo Fender">
+                    <img src="img/bfender.png" alt="Contra Baixo Fender" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Fender Bassman</h3>
                     <p>Código: 12356</p>
                     <p>Preço: R$ 3.000,00</p>
@@ -158,7 +158,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="gibson" data-preco="7000">
-                    <img src="img/bgibson.png" alt="Contra Baixo Gibson">
+                    <img src="img/bgibson.png" alt="Contra Baixo Gibson" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Fender Bassman</h3>
                     <p>Código: 12358</p>
                     <p>Preço: R$ 7.000,00</p>
@@ -166,7 +166,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="ibanez" data-preco="2500">
-                    <img src="img/bibanez.png" alt="Contra Baixo Ibanez">
+                    <img src="img/bibanez.png" alt="Contra Baixo Ibanez" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Ibanez Dio</h3>
                     <p>Código: 12360</p>
                     <p>Preço: R$ 2.750,00</p>
@@ -174,7 +174,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="cort" data-preco="4000">
-                    <img src="img/cort.png" alt="Contra Baixo Cort">
+                    <img src="img/cort.png" alt="Contra Baixo Cort" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Cort</h3>
                     <p>Código: 12370</p>
                     <p>Preço: R$ 4.000,00</p>
@@ -182,7 +182,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="baixos" data-marca="macland" data-preco="8000">
-                    <img src="img/macland.png" alt="Contra Baixo Macland">
+                    <img src="img/macland.png" alt="Contra Baixo Macland" style="background-image: url(img/banner.png)">
                     <h3>Contra Baixo Macland</h3>
                     <p>Código: 12372</p>
                     <p>Preço: R$ 8.000,00</p>
@@ -190,7 +190,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="acessorios" data-marca="boss" data-preco="850">
-                    <img src="img/boss-d1.jpg" alt="Pedal Boss DS-1">
+                    <img src="img/boss-d1.jpg" alt="Pedal Boss DS-1" style="background-image: url(img/banner.png)">
                     <h3>Pedal Boss Distortion DS-1</h3>
                     <p>Código: 12343</p>
                     <p>Preço: R$ 850,00</p>
@@ -201,7 +201,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="acessorios" data-marca="boss" data-preco="950">
-                    <img src="img/boss-ce5.jpg" alt="Pedal Boss Chorus CE-5">
+                    <img src="img/boss-ce5.jpg" alt="Pedal Boss Chorus CE-5" style="background-image: url(img/banner.png)">
                     <h3>Pedal Boss Chorus CE-5</h3>
                     <p>Código: 12345</p>
                     <p>Preço: R$ 950,00</p>
@@ -211,7 +211,7 @@
                     <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="produto" data-categoria="acessorios" data-marca="boss" data-preco="900">
-                    <img src="img/boss-ge7.png" alt="Pedal Boss EQ GE-7 ">
+                    <img src="img/boss-ge7.png" alt="Pedal Boss EQ GE-7 " style="background-image: url(img/banner.png)">
                     <h3>Pedal Boss Equalizer GE-7</h3>
                     <p>Código: 12321</p>
                     <p>Preço: R$ 900,00</p>
@@ -284,7 +284,7 @@
     </footer>
 
     <div id="login-cadastro-modal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content" style="background-image: url(img/banner.png)">
             <span class="close" onclick="fecharModal()">&times;</span>
             <div class="tabs">
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
