Manutenção do codigo part01

--- a/ajuda.html
+++ b/ajuda.html
@@ -22,14 +22,7 @@
                 </div>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
-                <li class="dropdown">
-                    <a href="produtos.html">Produtos</a>
-                    <div class="dropdown-content">
-                        <a href="/produtos/instrumentos.html">Instrumentos</a>
-                        <a href="/produtos/acessorios.html">Acessórios</a>
-                        <a href="/produtos/marcas.html">Marcas</a>
-                    </div>
-                </li>
+                <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
                 <li><a href="carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
@@ -40,7 +33,7 @@
     </header>
 
     <main>
-        <section class="ajuda" style="background-image: url(img/banner.png)">
+        <section class="ajuda" style="background-image: url(img/banner.png); background-repeat: repeat;" >
             <h1>Ajuda</h1>
             <p class="parag">Encontre respostas para as perguntas mais frequentes e instruções sobre como usar nossa
                 loja.</p>
@@ -182,7 +175,7 @@
             </div>
         </div>
     </div>
-    <!-- Inclue o VLibras -->
+    
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -196,6 +189,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/ajuda.js"></script>
 </body>
 
 </html>
