--- a/faq.html
+++ b/faq.html
@@ -22,14 +22,7 @@
                 </div>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
-                <li class="dropdown">
-                    <a href="produtos.html">Produtos</a>
-                    <div class="dropdown-content">
-                        <a href="/produtos/instrumentos.html">Instrumentos</a>
-                        <a href="/produtos/acessorios.html">Acessórios</a>
-                        <a href="/produtos/marcas.html">Marcas</a>
-                    </div>
-                </li>
+                <li><a href="produtos.html">Produtos</a></li>              
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
                 <li><a href="carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
@@ -39,7 +32,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="faq" style="background-image: url(img/banner.png)">
             <h1>Perguntas Frequentes (FAQ)</h1>
 
@@ -164,7 +157,7 @@
             </div>
         </div>
     </div>
-    <!-- Inclue o VLibras -->
+    
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -177,6 +170,7 @@
     </script>
     <script src="js/script.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/faq.js"></script>
 </body>
 
 </html>
