--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body style="background-image: url(img/banner.png);">
     <header>
         <nav>
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
@@ -23,14 +23,7 @@
                 </div>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
-                <li class="dropdown">
-                    <a href="produtos.html">Produtos</a>
-                    <div class="dropdown-content">
-                        <a href="/produtos/instrumentos.html">Instrumentos</a>
-                        <a href="/produtos/acessorios.html">Acessórios</a>
-                        <a href="/produtos/marcas.html">Marcas</a>
-                    </div>
-                </li>
+                <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
                 <li><a href="carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
@@ -64,8 +57,8 @@
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
-                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000" >
-                            <img src="img/bfender.png" alt="Contra Baixo Fender " style="background-image: url('img/banner.png')">
+                        <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000">
+                            <img src="img/bfender.png" alt="Contra Baixo Fender" style="background-image: url('img/banner.png')">
                             <h3>Contra Baixo Fender Bassman</h3>
                             <p>Código: 12356</p>
                             <p>Preço: R$ 3.000,00</p>
@@ -105,7 +98,6 @@
             </div>
         </section>
 
-
         <section id="carrinho" class="carrinho" style="display: none;">
             <h2>Carrinho de Compras</h2>
             <ul id="lista-carrinho"></ul>
@@ -113,7 +105,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer-end">
         <div class="footer-container">
             <div class="left-section">
                 <div class="social-media">
@@ -194,17 +186,7 @@
             </div>
         </div>
     </div>
-    <!-- Inclue o VLibras -->
-    <div vw class="enabled">
-        <div vw-access-button class="active"></div>
-        <div vw-plugin-wrapper>
-            <div class="vw-plugin-top-wrapper"></div>
-        </div>
-    </div>
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
-        new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script>
+
     <script src="js/script.js"></script>
     <script src="js/login.js"></script>
 </body>
