Manutenção do codigo part02

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <img src="img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
                 </div>
-                <p class="copyright">&copy; 2025 Loja Teste de Instrumentos Musicais. Todos os direitos reservados.</p>
+                <p class="copyright">&copy; 2025 Código Teste - Nilson Gomes. Todos os direitos reservados.</p>
             </div>
 
             <div class="newsletter">
