--- a/ajuda.html
+++ b/ajuda.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Encontre ajuda e suporte para utilizar nossa loja de instrumentos musicais.">
     <!-- Descrição do site para motores de busca -->
     <meta name="keywords" content="instrumentos musicais, ajuda, suporte, e-commerce">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- Palavras-chave para SEO -->
     <meta name="author" content="Nome da Loja">
     <!-- Autor do site -->
