--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Entre em contato conosco. Estamos aqui para ajudar.">
     <meta name="keywords" content="instrumentos musicais, contato, fale conosco">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Fale Conosco | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/fale-conosco.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
