--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="instrumentos musicais, guitarras, baixos, baterias, teclados, acessórios">
     <!-- Palavras-chave para SEO -->
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- Autor do site -->
     <title>Loja de Instrumentos Musicais | Instrumentos para Todos os Estilos</title>
     <!-- Título da página que aparece na aba do navegador -->
