--- a/perfil.html
+++ b/perfil.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Página de perfil do usuário">
     <meta name="keywords" content="perfil, compras, pagamentos, endereços">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Perfil do Usuário | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/perfil.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
