--- a/carrinho.html
+++ b/carrinho.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Revise os produtos escolhidos no seu carrinho de compras.">
     <meta name="keywords" content="instrumentos musicais, carrinho de compras, e-commerce">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Carrinho de Compras | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/carrinho.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
