--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Perguntas Frequentes sobre nossa loja de instrumentos musicais.">
     <meta name="keywords" content="instrumentos musicais, FAQ, perguntas frequentes, e-commerce">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>FAQ | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
