--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="instrumentos musicais, guitarras, baixos, baterias, teclados, acessórios, e-commerce">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Produtos | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/produtos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
