--- a/quem-somos.html
+++ b/quem-somos.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Saiba mais sobre nossa loja de instrumentos musicais.">
     <meta name="keywords" content="instrumentos musicais, loja, quem somos">
     <meta name="author" content="Nome da Loja">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Quem Somos | Loja de Instrumentos Musicais</title>
     <link rel="stylesheet" href="css/quem-somos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
